the first change I made to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>My webpage with images</title>
    </head>
    <body>
-      <p>This is a die.</p>
+      <p>This is a CSCI 4350!</p>
 
       <!-- Your solution goes here -->
 
