second change I made

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8">
-      <title>My webpage with images</title>
+      <title>My webpage with another change</title>
    </head>
    <body>
       <p>This is a CSCI 4350!</p>
