--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>My webpage with another change</title>
    </head>
    <body>
-      <p>This is a CSCI 4350!</p>
+      <p>This is a CSCI 4350 Message, again!</p>
 
       <!-- Your solution goes here -->
 
