first attempt at a proj page

--- a/index.html
+++ b/index.html
@@ -9,5 +9,25 @@
 
       <!-- Your solution goes here -->
 
+      <section style="max-width: 800px; margin: 2em auto; padding: 2em; background: #f9f9f9; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.07);">
+         <h2 style="text-align:center; color:#2c3e50;">My Class Project Presentation</h2>
+         <div style="display: flex; flex-direction: column; align-items: center; gap: 2em;">
+            <!-- Video Placeholder -->
+            <div style="width: 100%; max-width: 560px; aspect-ratio: 16/9; background: #ddd; display: flex; align-items: center; justify-content: center; border-radius: 8px;">
+               <span style="color: #888; font-size: 1.5em;">[Expository Video Placeholder]</span>
+            </div>
+            <!-- Thumbnails -->
+            <div style="display: flex; gap: 1.5em; justify-content: center;">
+               <div style="width: 120px; height: 90px; background: #bbb; border-radius: 6px; display: flex; align-items: center; justify-content: center;">
+                  <span style="color: #fff; font-size: 1em;">Thumbnail 1</span>
+               </div>
+               <div style="width: 120px; height: 90px; background: #bbb; border-radius: 6px; display: flex; align-items: center; justify-content: center;">
+                  <span style="color: #fff; font-size: 1em;">Thumbnail 2</span>
+               </div>
+            </div>
+            <p style="text-align:center; color:#555; max-width: 600px;">This project demonstrates my work for CSCI 4350. The video above explains the main concepts, and the thumbnails below highlight key features or results.</p>
+         </div>
+      </section>
+
    </body>
 </html>
