--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <title>Bob's Home Page</title>
-   </head>
-   <body>
-      <h2>Project List</h2>
-      <a href="project1.html">Project 1</a>
-            <div id="timer" style="margin-top:2em; font-size:1.2em; color:#2c3e50;">
-               Time since page load: <span id="seconds">0</span> seconds
-            </div>
-            <script>
-               let seconds = 0;
-               const secondsSpan = document.getElementById('seconds');
-               setInterval(() => {
-                  seconds++;
-                  secondsSpan.textContent = seconds;
-               }, 1000);
-            </script>
-   </body>
+
+<head>
+   <meta charset="UTF-8">
+   <title>Bob's Home Page</title>
+</head>
+
+<body>
+   <h2>Project List</h2>
+   <a href="project1.html">Project 1</a><br>
+   <a href="MTT Car Show/index.html">Miles Through Time Car Show June 28, 2025</a><br>
+   <a href="Ch3MoreHTML/index.html">Chapter 3 More HTML</a><br>
+   
+   <div id="timer" style="margin-top:2em; font-size:1.2em; color:#2c3e50;">
+      Time since page load: <span id="seconds">0</span> seconds
+   </div>
+   <script>
+      let seconds = 0;
+      const secondsSpan = document.getElementById('seconds');
+      setInterval(() => {
+         seconds++;
+         secondsSpan.textContent = seconds;
+      }, 1000);
+   </script>
+</body>
+
 </html>
