--- a/Ch3MoreHTML/forms_redux.html
+++ b/Ch3MoreHTML/forms_redux.html
@@ -6,7 +6,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<form action="#" method="post">
+	<form action="http://141.148.75.109:3000/echo" method="post">
 		<fieldset>
 			<legend>User Preferences</legend>
 			<div>
@@ -63,7 +63,7 @@
 		<fieldset>
 			<legend>Favorite Color</legend>
 			<label for="fav_color">Select your favorite color:</label>
-			<input type="color" id="fav_color" name="fav_color" value="#ff0000">
+			<input type="color" id="fav_color" name="fav_color" value="#ff00ff">
 		</fieldset>
 
 		<fieldset>
