--- a/MTT Car Show/index.html
+++ b/MTT Car Show/index.html
@@ -41,17 +41,17 @@
 		const droneLarge = document.getElementById('drone-large');
 		const droneFolder = 'Aerial Drone/';
 		const dronePhotos = [
-			'DJI_20250628085750_0009_D.JPG',
-			'DJI_20250628085757_0010_D.JPG',
-			'DJI_20250628090516_0011_D.JPG',
-			'DJI_20250628090659_0013_D.JPG',
-			'DJI_20250628090720_0014_D.JPG',
-			'DJI_20250628090744_0015_D.JPG',
-			'DJI_20250628095656_0020_D.JPG',
-			'DJI_20250628095712_0022_D.JPG',
-			'DJI_20250628100831_0024_D.JPG',
-			'DJI_20250628100848_0025_D.JPG'
-			];
+			'DJI_20250628085750_0009_D.png',
+			'DJI_20250628085757_0010_D.png',
+			'DJI_20250628090516_0011_D.png',
+			'DJI_20250628090659_0013_D.png',
+			'DJI_20250628090720_0014_D.png',
+			'DJI_20250628090744_0015_D.png',
+			'DJI_20250628095656_0020_D.png',
+			'DJI_20250628095712_0022_D.png',
+			'DJI_20250628100831_0024_D.png',
+			'DJI_20250628100848_0025_D.png'
+			]; 
 	
 		// Set the initial drone photo
 		if (dronePhotos.length > 0) {
